enum GrindSize { FINE, MEDIUM_FINE, MEDIUM, MEDIUM_COARSE, COARSE }
