enum Roast { LIGHT, MEDIUM_LIGHT, MEDIUM, MEDIUM_DARK, DARK }
