class Step {
  final String description;
  final Duration duration;

  Step(this.description, this.duration);
}
