@startuml
hide empty methods
hide empty fields

class Bean

class RatioCalculator {
    double ratio
    double beanQuantity
    double waterQuantity
}

class Flavor

class Method {
    name
}

enum GrindSize {
    FINE,
    MEDIUM_FINE,
    MEDIUM,
    MEDIUM_COARSE,
    COARSE
}

class Producer

class Roaster

enum Roast {
    CUSTOM_PROFILE,
    LIGHT,
    MEDIUM_LIGHT,
    MEDIUM,
    MEDIUM_DARK,
    DARK
}

class Recipe {
   String name
   Bean bean
   double ratio
   double waterQuantity
   double beanQuantity
   String? comments
}

class Step {
    duration
    description
}

class WaterStep extends Step {
    double quantity
}

class BeanStep extends Step {
    double quantity
}

class Experiment

Bean ..> "1..*" Flavor

Producer ..> "0..*" Bean

Bean ..> Roast

Roaster ..> "0..*" Bean

Experiment ..> Recipe

Experiment --> "1..*" Adjustment

Recipe ..> Bean

Recipe ..> GrindSize

Recipe ..> Method

Recipe --> "1..*" Step
@enduml
